--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <!-- <script src="https://unpkg.com/@livechat/customer-sdk@3.1.0"></script> -->
   <script src="https://unpkg.com/@livechat/customer-sdk@3.1.0"></script>
 
-  <link type="text/css"  href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   
 
-  <link  type="text/css" href="style.css">
+  <link  href="style.css">
 
-  <link type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
   
 
   <!-- <script> import { createDetailsWidget } from "@livechat/agent-app-sdk"; </script> -->
