index html commit

--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
     const instance = AccountsSDK.init({
       // obtained from the Developers Console when you create your app
       // client_id: "53e59464b2122e418a5ec4c80de5965e",
-      client_id: "a715e417b7201b993f9286a8c24af754",
-                  
+      //client_id: "a715e417b7201b993f9286a8c24af754",
+      client_id:"86a5943229b2c7bde3e8e1e08cdf304a",                  
       
       // the callback executed when user's identity is fetched
       onIdentityFetched: (error, data) => {
