client id updates

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
 
     const customerSDK = CustomerSDK.init({
         licenseId: 7499411,
-        clientId: "a715e417b7201b993f9286a8c24af754",
+//        clientId: "a715e417b7201b993f9286a8c24af754",
+        clientId: "86a5943229b2c7bde3e8e1e08cdf304a",
         
         })
 
