--- a/index.html
+++ b/index.html
@@ -22,269 +22,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   
 
-  <!-- <link  type="text/css"  href="css/style.css"/> -->
+  <link  rel="stylesheet" type="text/css"  href="css/style.css"/>
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Poppins" />
-  <script type="text/css">
-body {
-  font-family: poppins;
-}
-h6 {
-  font-size: 14px;
-  color: #4a5ab5;
-}
-.bg-livechat {
-  background-color: #f1f6f8;
-  padding: 16px 8px;
-}
-.bg-livechat textarea {
-  border: 1px solid rgb(235, 235, 235);
-  resize: none;
-  position: relative;
-  font-size: 12px;
-}
-
-.header {
-  background-color: #4a5ab5;
-}
-
-/* .btn.btn-edit
-{
-    background-color: #1ea0eb;
-    color: #fff;
-    border-radius: 8px;
-    padding: 2px 8px;
-    font-size: 14px;
-}
-.btn.btn-use
-{
-    background-color: #11c069;
-    color: #fff;
-    border-radius: 8px;
-    padding: 2px 8px;
-    font-size: 14px;
-   
-} */
-/* .info-part
-{
-   padding: 8px;
-   background-color: #fff;
-   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-   border-radius: 12px;
-} */
-/* .badge
-{
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-   padding-left: 3px;
-   padding-top: 19px;
-   padding-right: 3px;
-   padding-bottom: 8px;
-    font-size: 10px;
-    background-color: #13cea5;
-    margin-left: 30px;
-    color: #fff;
-    position: absolute;
-    z-index: 1;
-    top: -40px;
-    
-} */
-.btn.btn-use:hover,
-.btn.btn-edit:hover {
-  background-color: #0b1320;
-}
-/* .question 
-{
-    /* border: 2px solid #ec4d4d; */
-/* background-color: #56c5b5;
-    background-image: url("/images/vector.png");
-    background-repeat: no-repeat;
-    background-size: 600px 250px;
-
-    /* background-image: linear-gradient(315deg, #f96566 0%, #0ab9bf 74%); */
-/* box-shadow: rgba(47, 39, 93, 0.3) 0px 8px 24px; */
-/* padding: 8px;
-    border-radius: 10px; */
-/* }  */
-/* .question textarea
-{
-    background-color:#f8feff;
-} */
-/* .sentiment-answer{
-    border-top: 1px solid rgb(241, 241, 241);
-    border-bottom:1px solid rgb(241, 241, 241);
-} */
-
-.sentiment-answer .iconify {
-  font-size: 10px;
-}
-.sentiment-question .iconify {
-  font-size: 10px;
-}
-#qsicon {
-  display: none;
-}
-#ans1icon {
-  display: none;
-}
-#ans2icon {
-  display: none;
-}
-#answer-div1 {
-  display: none;
-}
-#answer-div2 {
-  display: none;
-}
-
-.sentiment-answer .percent,
-.question .percent {
-  font-size: 10px;
-}
-.sentiment-question .percent,
-.question .percent {
-  font-size: 10px;
-}
-
-.btn.btn-edit,
-.btn.btn-use {
-  padding-right: 13px;
-  padding-left: 13px;
-}
-.alert h6 {
-  color: #474b4f;
-  font-size: 12px;
-}
-.card {
-  border-radius: 0px;
-}
-.answer {
-  border-bottom: 0.6px solid rgb(226, 225, 225);
-}
-.answer .card:hover {
-  background-color: #fafafa;
-}
-.answer,
-.answer-full p {
-  font-size: 12px;
-  margin-bottom: 0px !important;
-}
-.answer .link-more {
-  margin-top: -10px;
-  color: #808080;
-  font-size: 8px;
-}
-.iconify.edit-icon,
-.iconify.process-icon,
-.iconify.send-icon {
-  color: #60656b;
-}
-
-.chat-history {
-  background-color: #ffffff;
-  padding: 12px 4px;
-  border-radius: 4px;
-}
-.chat-history .row {
-  padding: 0px 6px;
-}
-.chat-history .mr-1 {
-  margin-right: 0.33rem !important;
-}
-.chat-history select {
-  width: 100%;
-  border: none;
-  padding: 12px;
-  border-radius: 4px;
-  font-size: 11px;
-}
-.chat-history .iconify {
-  font-size: 12px;
-}
-.btn-sm {
-  background-color: #f1f1f1;
-}
-.btn-sm:hover {
-  background-color: #ffffff;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-}
-
-.chat-history option {
-  border-bottom: 1px solid #f3f3f3;
-}
-.result-back .iconify {
-  font-size: 14px;
-  margin-top: 3px;
-}
-
-.full-view h6 {
-  font-size: 15px;
-  font-weight: 600;
-}
-.full-view small {
-  font-size: 10px;
-  color: #909090;
-}
-.full-view .badge,
-.answer .badge {
-  font-size: 11px;
-}
-
-@media only screen and (max-width: 415px) {
-  .full-view .btn-sm {
-    margin-left: 6px;
-  }
-}
-@media (min-width: 360px) and (max-width: 411px) {
-  .full-view .iconify {
-    font-size: 10.8px;
-  }
-}
-
-/* .question 
-{ */
-/* border: 2px solid #ec4d4d; */
-/* background-color: #56c5b5;
-    background-image: url("/images/vector.png");
-    background-repeat: no-repeat;
-    background-size: 400px 200px; */
-/* background-image: linear-gradient(315deg, #f96566 0%, #0ab9bf 74%); */
-/* box-shadow: rgba(47, 39, 93, 0.3) 0px 8px 24px;
-    padding: 8px;
-    border-radius: 10px; */
-/* } */
-/* }
-  @media (min-width:415px) and (max-width:1024px){
-    .badge{
-        margin-left: 66px;
-    }
-    
-  } */
-
-#child {
-  display: none;
-}
-#more-button-1 {
-  display: none;
-}
-#more-button-2 {
-  display: none;
-}
-#no-recommendation-div {
-  display: none;
-}
-
-#auto-answer {
-  display: none;
-}
-
-#answer-div {
-  display: none;
-}
-
-
-  </script>
+  
 
   <!-- <script> import { createDetailsWidget } from "@livechat/agent-app-sdk"; </script> -->
   
